--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "umc-7th-node-munn",
-  "type": "module",
-  "version": "1.0.0",
-  "description": "👾 7th UMC Ewha Server-Node.js Repository",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "dev": "nodemon --exec node src/index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "http-status-codes": "^2.3.0",
-    "mysql2": "^3.11.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
-  }
+    "name": "umc-7th-node-munn",
+    "type": "module",
+    "version": "1.0.0",
+    "description": "👾 7th UMC Ewha Server-Node.js Repository",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node src/index.js",
+        "dev": "nodemon -e js,json,prisma --exec \"prisma generate && node src/index.js\""
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@prisma/client": "^5.22.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
+        "http-status-codes": "^2.3.0",
+        "mysql2": "^3.11.3",
+        "prisma": "^5.22.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.7"
+    }
 }
