--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^5.22.0",
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
+        "express-session": "^1.18.1",
         "http-status-codes": "^2.3.0",
+        "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.11.3",
+        "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
         "prisma": "^5.22.0",
         "swagger-autogen": "^2.23.7",
         "swagger-ui-express": "^5.0.1"
